# cplusserver

./: .gitignore  CMakeLists.txt  Transaction.cpp  Transaction.h  main.cpp  readme.md  vcpkg.json
Desserts/: Brownie.cpp  Brownie.h  Cake.cpp  Cake.h  Dessert.h  DessertFactory.cpp  DessertFactory.h
test_client/: main.py  readme.md
